# amazon-budget-buddy

./: .gitignore  README.md  SYNC_WORKFLOW.md  config.example.json  plan.md  pyproject.toml
.github/workflows/: ci.yml
amazon_spending/: CLAUDE.md  actual_sync.py  ai_categorize.py  api.py  audit.py  browser_auth.py  cli.py  collector.py  db.py  exporter.py  importers.py  matcher.py  paths.py  webapp.py
amazon_spending/.claude/: settings.local.json
amazon_spending/retailers/: __init__.py  amazon.py  base.py  target.py
amazon_spending/sql/: schema.sql
amazon_spending/tui/: __init__.py  app.py  command_runner.py  queries.py  tui.css
amazon_spending/tui/screens/: __init__.py  commands.py  dashboard.py  items.py  orders.py  reports.py  transactions.py
budget_buddy/: CLAUDE.md  actual_sync.py  api.py  audit.py  cli.py  db.py
budget_buddy/retailers/: __init__.py  amazon.py  base.py  target.py
budget_buddy/sql/: schema.sql
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo
frontend/src/: App.tsx  api.ts  styles.css  types.ts
frontend/src/components/: DataTable.tsx  DetailSummaryList.tsx  Panel.tsx  SimpleTable.tsx  StatCard.tsx
frontend/src/components/charts/: BreakdownChart.tsx  SpendTrendChart.tsx
frontend/src/hooks/: useListQuery.ts
frontend/src/lib/: chartTheme.ts  dates.ts
frontend/src/pages/: ActualBudgetPage.tsx  AdminPage.tsx  BabySisterPage.tsx  HomePage.tsx  ItemDetailPage.tsx  ItemsPage.tsx  OrderDetailPage.tsx  OrdersPage.tsx  ReportsPage.tsx  SettingsPage.tsx  StatusPage.tsx  TransactionDetailPage.tsx  TransactionsPage.tsx
prompts/: ui_react_implementation_checklist.md  ui_react_spec_prompt.md
samples/: transactions.csv
scripts/: app_control.sh
tests/: test_actual_config.py  test_actual_sync.py  test_amazon_collect_logic.py  test_db_status.py  test_sync_logic.py  test_tui_queries.py
