[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "budget-buddy"
version = "0.1.0"
description = "Local-first retailer order history collector and Actual Budget reconciler"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "playwright>=1.50.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
]

[project.scripts]
budget-buddy = "budget_buddy.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["budget_buddy*"]

[tool.setuptools.package-data]
budget_buddy = ["sql/*.sql"]

[project.optional-dependencies]
actual = [
  "actualpy>=0.21.0",
]
dev = [
  "ruff>=0.9.0",
  "mypy>=1.10.0",
  "pytest>=8.0.0",
  "bandit>=1.8.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F"]
ignore = [
  "E501",   # line too long
  "E402",   # module level import not at top of file
  "F401",   # unused imports (often re-exported)
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["tests"]
